basic routing completed

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=/home/rezve/.netbeans/8.2/config/GlassFishEE6/Properties/gfv3-1001029759.properties
+file.reference.mysql-connector-java-5.1.46-bin.jar=/home/rezve/Software/jdbc/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46-bin.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=/home/rezve/glassfish-4.1.1/glassfish/domains/domain1
 j2ee.server.home=/home/rezve/glassfish-4.1.1/glassfish
