--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,5 +6,13 @@ and open the template in the editor.
 -->
 
 <web-app>
-
+<!--    <filter>  
+        <filter-name>f1</filter-name>  
+        <filter-class>kodvel.core.LoadFilter</filter-class>  
+    </filter>  
+   
+    <filter-mapping>  
+        <filter-name>f1</filter-name>  
+        <url-pattern>/</url-pattern>  
+    </filter-mapping> -->
 </web-app>
